# Roop-PDF

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  release.yml
assets/: README.md
packaging/: roop_pdfmd_linux.spec  roop_pdfmd_windows.spec
scripts/: build_linux.sh  build_windows.ps1
src/roop_pdfmd/: __init__.py  __main__.py
src/roop_pdfmd/core/: __init__.py  converter.py  models.py  ocr_preprocess.py  text_quality.py  text_utils.py
src/roop_pdfmd/gui/: __init__.py  about_dialog.py  app.py  main_window.py  settings_dialog.py  settings_store.py  worker.py
src/roop_pdfmd/utils/: __init__.py  logging_utils.py  paths.py
tests/: test_converter.py  test_gui_import.py  test_ocr_preprocess.py  test_text_quality.py  test_text_utils.py
